--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.20.1",
     "react-big-calendar": "^1.8.5",
+    "moment": "^2.30.1",
     "date-fns": "^2.30.0",
     "lucide-react": "^0.294.0",
     "clsx": "^2.0.0",
