fix: autoriser package-lock.json pour GitHub Actions

--- a/.gitignore
+++ b/.gitignore
@@ -53,7 +53,7 @@ Thumbs.db
 *.swo
 
 # Package manager files
-package-lock.json
+# package-lock.json (needed for GitHub Actions)
 yarn.lock
 pnpm-lock.yaml
 
